@@ -9,36 +9,24 @@
 
 #include "gm/gm.h"
 #include "include/core/SkBitmap.h"
-#include "include/core/SkBlendMode.h"
 #include "include/core/SkCanvas.h"
 #include "include/core/SkColor.h"
 #include "include/core/SkMatrix.h"
 #include "include/core/SkPaint.h"
 #include "include/core/SkRect.h"
-#include "include/core/SkRefCnt.h"
-#include "include/core/SkScalar.h"
-#include "include/core/SkShader.h"
 #include "include/core/SkSize.h"
 #include "include/core/SkString.h"
-#include "include/core/SkTypes.h"
 #include "include/effects/SkGradientShader.h"
-#include "include/gpu/GrContext.h"
-#include "include/gpu/GrTypes.h"
 #include "include/private/GrTypesPriv.h"
 #include "include/private/SkTArray.h"
-#include "src/gpu/GrCaps.h"
 #include "src/gpu/GrContextPriv.h"
-#include "src/gpu/GrFragmentProcessor.h"
-#include "src/gpu/GrPaint.h"
 #include "src/gpu/GrProxyProvider.h"
 #include "src/gpu/GrRenderTargetContext.h"
 #include "src/gpu/GrRenderTargetContextPriv.h"
 #include "src/gpu/GrSamplerState.h"
 #include "src/gpu/GrTextureProxy.h"
-#include "src/gpu/effects/GrPorterDuffXferProcessor.h"
 #include "src/gpu/effects/GrTextureDomain.h"
-#include "src/gpu/ops/GrDrawOp.h"
-#include "src/gpu/ops/GrFillRectOp.h"
+#include "tools/gpu/TestOps.h"
 
 #include <memory>
 #include <utility>
@@ -49,8 +37,7 @@ namespace skiagm {
  */
 class TextureDomainEffect : public GpuGM {
 public:
-    TextureDomainEffect(GrSamplerState::Filter filter)
-            : fFilter(filter) {
+    TextureDomainEffect(GrSamplerState::Filter filter) : fFilter(filter) {
         this->setBGColor(0xFFFFFFFF);
     }
 
@@ -66,9 +53,9 @@ protected:
     }
 
     SkISize onISize() override {
-        const SkScalar canvasWidth = kDrawPad +
-                (kTargetWidth + 2 * kDrawPad) * GrTextureDomain::kModeCount +
-                kTestPad * GrTextureDomain::kModeCount;
+        const SkScalar canvasWidth =
+                kDrawPad + 2 * ((kTargetWidth + 2 * kDrawPad) * GrTextureDomain::kModeCount +
+                                kTestPad * GrTextureDomain::kModeCount);
         return SkISize::Make(SkScalarCeilToInt(canvasWidth), 800);
     }
 
@@ -124,8 +111,7 @@ protected:
                               fBitmap.width() / 2 + 2, fBitmap.height() / 2 + 2),
         };
 
-        SkRect renderRect = SkRect::Make(fBitmap.bounds());
-        renderRect.outset(kDrawPad, kDrawPad);
+        SkRect localRect = SkRect::Make(fBitmap.bounds()).makeOutset(kDrawPad, kDrawPad);
 
         SkScalar y = kDrawPad + kTestPad;
         for (int tm = 0; tm < textureMatrices.count(); ++tm) {
@@ -138,26 +124,34 @@ protected:
                         // Repeat mode doesn't produce correct results with bilerp filtering
                         continue;
                     }
-
-                    GrPaint grPaint;
-                    grPaint.setXPFactory(GrPorterDuffXPFactory::Get(SkBlendMode::kSrc));
-                    auto fp = GrTextureDomainEffect::Make(
-                            proxy, SkColorTypeToGrColorType(fBitmap.colorType()),
-                            textureMatrices[tm],
-                            GrTextureDomain::MakeTexelDomain(texelDomains[d], mode),
-                            mode, fFilter);
-
-                    if (!fp) {
+                    auto ct = SkColorTypeToGrColorType(fBitmap.colorType());
+                    SkRect domainRect = GrTextureDomain::MakeTexelDomain(texelDomains[d], mode);
+                    auto fp1 = GrTextureDomainEffect::Make(
+                            proxy, ct, textureMatrices[tm], domainRect, mode, fFilter);
+                    if (!fp1) {
                         continue;
                     }
-                    const SkMatrix viewMatrix = SkMatrix::MakeTrans(x, y);
-                    grPaint.addColorFragmentProcessor(std::move(fp));
-                    renderTargetContext->priv().testingOnly_addDrawOp(
-                            GrFillRectOp::MakeNonAARect(context, std::move(grPaint),
-                                                        viewMatrix, renderRect));
-                    x += renderRect.width() + kTestPad;
+                    auto fp2 = fp1->clone();
+                    SkASSERT(fp2);
+                    auto drawRect = localRect.makeOffset(x, y);
+                    if (auto op = sk_gpu_test::test_ops::MakeRect(
+                                context, std::move(fp1), drawRect, localRect)) {
+                        renderTargetContext->priv().testingOnly_addDrawOp(std::move(op));
+                    }
+                    x += localRect.width() + kTestPad;
+                    // Draw again with a translated local rect and compensating translate matrix.
+                    drawRect = localRect.makeOffset(x, y);
+                    static constexpr SkVector kT = {-100, 300};
+                    if (auto op = sk_gpu_test::test_ops::MakeRect(context,
+                                                                  std::move(fp2),
+                                                                  drawRect,
+                                                                  localRect.makeOffset(kT),
+                                                                  SkMatrix::MakeTrans(-kT))) {
+                        renderTargetContext->priv().testingOnly_addDrawOp(std::move(op));
+                    }
+                    x += localRect.width() + kTestPad;
                 }
-                y += renderRect.height() + kTestPad;
+                y += localRect.height() + kTestPad;
             }
         }
         return DrawResult::kOk;
